--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "node src/"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.11.18",
+    "morgan": "^1.10.0"
   }
 }
