--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.11.18",
+    "mongoose": "5.11.15",
     "morgan": "^1.10.0"
   }
 }
