--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "5.11.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-schedule": "^2.0.0"
   }
 }
