send login response message

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node src/"
+    "start": "nodemon src"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
