--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "5.11.15",
     "morgan": "^1.10.0",
     "node-schedule": "^2.0.0",
+    "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
