--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MONGODB_URL=mongodb://user:pass@localhost:27017
 EMAIL_ADDR=youremail@gmail.com
 EMAIL_PWD=yourpwd
 SERVER_SECRET_KEY=
+RABBITMQ_URL=
