--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon --experimental-specifier-resolution=node src"
   },
   "dependencies": {
+    "amqplib": "^0.7.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
